--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -2,26 +2,26 @@
 <packages>
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
-  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.1.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.6.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Moq" version="4.13.1" targetFramework="net461" />
+  <package id="Moq" version="4.14.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.12.0" targetFramework="net461" />
-  <package id="Octokit" version="0.46.0" targetFramework="net461" />
+  <package id="Octokit" version="0.48.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.5-alpha.0.2" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0-preview.2.20160.6" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0-preview.5.20278.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net461" />
   <package id="System.Reactive" version="4.4.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.2.20160.6" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.5.20278.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
